<resources>

    <string name="app_name">Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_demo_screens">EAS :)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="login_head">Log In to EAS</string>
    <string name="carer_name">Name of the Care Giver</string>
    <string name="location">Access Location</string>
    <string name="activity">Access Activity Levels</string>
    <string name="send_req">Send Request</string>
    <string name="dob">Date of Birth</string>
    <string name="carer_mail">Mail ID of the Care Giver</string>
    <string name="gender">Gender</string>
    <string name="nothing"/>
    <string name="blood">Blood Group</string>
    <string name="contact">Contact Number</string>
    <string name="routine_start">Routine Start</string>
    <string name="time_night">As \'9:30 PM\' or \'21:30\'</string>
    <string name="routine_end">Routine End</string>
    <string name="time_morning">As \'7:30 AM\' or \'7:30\'</string>
    <string name="allergy">Allergy</string>
    <string name="allergy_hint">Seperate by comma(,) if multiple</string>
    <string name="first_aid">First Aid Suggested</string>
    <string name="helpme">Help Me!!</string>
    <string name="add_subs">Add Subscribers</string>
    <string name="add_details">Details</string>
    <string name="tab1">Emergency???</string>
    <string name="tab2">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="values">Accelerometer</string>
    <string name="register">Register Here</string>
    <string name="save_details">Save</string>
    <string name="x_">X:</string>
    <string name="y_">Y:</string>
    <string name="z_">Z:</string>
    <string name="current_text">Live changes in activity</string>
    <string name="last_text">Values lastly submitted</string>
    <string name="X_">X :-1.167</string>
    <string name="Y_">Y: 0.459</string>
    <string name="Z_">Z: 9.784</string>
    <string name="subs">Subscribers</string>
    <string name="title_home">Home Screen</string>
    <string name="title_details">Edit Details</string>
    <string name="title_add_subs">Add Subscribers</string>
    <string name="title_notify">Notifications</string>
    <string name="title_values">Accelerometer</string>
    <string name="title_subscribers">Care Givers</string>
    <string name="loc">Location</string>
    <string name="locButton">Show Location</string>
    <string name="manage_application">Start/Stop the application</string>
    <string name="start_service">Start Application</string>
    <string name="stop_service">Stop Application</string>
    <string name="space"/>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="registration">Registration</string>
    <string name="emailId">Email Id</string>
    <string name="regPass">Password</string>
    <string name="regFirst">First Name</string>
    <string name="regLast">Last Name</string>
    <string name="regButton">Register</string>
    <string name="pb">P.B: By default, access to view your activity is given</string>

</resources>