<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TabHost
        android1:id="@+id/tabhost"
        android1:layout_width="0dip"
        android1:layout_height="match_parent"
        android1:layout_weight="1" >

        <LinearLayout
            android1:layout_width="match_parent"
            android1:layout_height="match_parent"
            android1:orientation="vertical" >

            <TabWidget
                android1:id="@android:id/tabs"
                android1:layout_width="match_parent"
                android1:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android1:id="@android:id/tabcontent"
                android1:layout_width="match_parent"
                android1:layout_height="match_parent" >

                <LinearLayout
                    android1:id="@+id/tab1"
                    android1:layout_width="match_parent"
                    android1:layout_height="match_parent" >

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@color/red"
                        android:text="@string/helpme"
                        android:textColor="@color/head"
                        android:textSize="40dp" />
                </LinearLayout>

                <TableLayout
                    android1:id="@+id/tab2"
                    android1:layout_width="match_parent"
                    android1:layout_height="match_parent" >

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:weightSum="100" >

                        <Button
                            android:id="@+id/edit_details"
                            android:layout_width="fill_parent"
                            android:layout_weight="40"
                            android:background="@color/univ"
                            android:gravity="center"
                            android:height="70dp"
                            android:text="@string/add_details"
                            android:textColor="@color/head"
                            android:textSize="20dp" />

                        <Space android:layout_weight="20" />

                        <Button
                            android:id="@+id/notifications"
                            android:layout_width="fill_parent"
                            android:layout_weight="40"
                            android:background="@color/univ"
                            android:gravity="center"
                            android:height="70dp"
                            android:text="@string/notifications"
                            android:textColor="@color/head"
                            android:textSize="20dp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="wrap_content"
                        android:layout_height="10dp"
                        android:padding="3dp"
                        android:weightSum="100" />

                    <TableRow
                        android:id="@+id/tableRow3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:weightSum="100" >

                        <Button
                            android:id="@+id/add_subs"
                            android:layout_width="fill_parent"
                            android:layout_weight="40"
                            android:background="@color/univ"
                            android:gravity="center"
                            android:height="70dp"
                            android:text="@string/add_subs"
                            android:textColor="@color/head"
                            android:textSize="20dp" />

                        <Space android:layout_weight="20" />

                        <Button
                            android:id="@+id/subs"
                            android:layout_width="fill_parent"
                            android:layout_weight="40"
                            android:background="@color/univ"
                            android:gravity="center"
                            android:height="70dp"
                            android:text="@string/subs"
                            android:textColor="@color/head"
                            android:textSize="20dp" />
                    </TableRow>
                    <TableRow
                        android:id="@+id/tableRow4"
                        android:layout_width="wrap_content"
                        android:layout_height="10dp"
                        android:padding="3dp"
                        android:weightSum="100" />
                    <TableRow
                        android:id="@+id/tableRow5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:weightSum="100" >

                        <Button
                            android:id="@+id/values"
                            android:layout_width="fill_parent"
                            android:layout_weight="40"
                            android:background="@color/univ"
                            android:gravity="center"
                            android:height="70dp"
                            android:text="@string/values"
                            android:textColor="@color/head"
                            android:textSize="20dp" />
                        <Space android:layout_weight="20" />

                        <Button
                            android:id="@+id/loc"
                            android:layout_width="fill_parent"
                            android:layout_weight="40"
                            android:background="@color/univ"
                            android:gravity="center"
                            android:height="70dp"
                            android:text="@string/loc"
                            android:textColor="@color/head"
                            android:textSize="20dp" />
                    </TableRow>
                    <TableRow
                        android:id="@+id/tableRow6"
                        android:layout_width="wrap_content"
                        android:layout_height="10dp"
                        android:padding="3dp"
                        android:weightSum="100" />
                    <TableRow
                        android:id="@+id/tableRow7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:weightSum="100" >

                        <Button
                            android:id="@+id/settings"
                            android:layout_width="fill_parent"
                            android:layout_weight="40"
                            android:background="@color/univ"
                            android:gravity="center"
                            android:height="70dp"
                            android:text="@string/settings"
                            android:textColor="@color/head"
                            android:textSize="20dp" />
                        <Space android:layout_weight="20" />

                        <Button
                            android:id="@+id/notes"
                            android:layout_width="fill_parent"
                            android:layout_weight="40"
                            android:background="@color/univ"
                            android:gravity="center"
                            android:height="70dp"
                            android:text="@string/notes"
                            android:textColor="@color/head"
                            android:textSize="20dp" />
                    </TableRow>
                </TableLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>